--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -186,8 +186,12 @@ hr {
 .menu_divider,
 .ovk-diag-action,
 .minilink .counter,
-.topGrayBlock {
-    background-color: #2c2640;
+.topGrayBlock,
+.showMore,
+.showMoreAudiosPlaylist,
+#showMorePhotos,
+#showMoreVideos {
+    background-color: #2c2640 !important;
 }
 
 .bsdn_contextMenu {
@@ -313,11 +317,11 @@ tr.v,
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/flex_arrow_open.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/flex_arrow_open.png") !important;
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/flex_arrow_shut.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/flex_arrow_shut.gif") !important;
 }
 
 .ovk-video>.preview,
@@ -344,17 +348,17 @@ tr.h {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.3.0/resource/header_purple.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/header_purple.png") !important;
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/header.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/header.png") !important;
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/header_custom.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/header_custom.png") !important;
 }
 
 .page_yellowheader span,
@@ -392,11 +396,11 @@ select,
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/checkbox.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/checkbox.png") !important;
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/radio.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/radio.png") !important;
 }
 
 .header_navigation .link, .header_navigation .header_divider_stick {
@@ -404,20 +408,20 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/like.gif") !important;
 }
 
 .pinned-mark,
 .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/input_clear.gif") !important;
 }
 
 .user-alert {
@@ -450,7 +454,7 @@ input[type="radio"] {
 }
 
 #backdropEditor {
-    background-image: url("/themepack/midnight/0.0.3.0/resource/backdrop-editor.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.1/resource/backdrop-editor.gif") !important;
     border-color: #473e66 !important;
 }
 
@@ -586,11 +590,6 @@ ul {
 .attachAudio:hover {
     background: #19142D !important;
     cursor: pointer;
-}
-
-.showMore,
-.showMoreAudiosPlaylist {
-    background: #181826 !important;
 }
 
 /* Tour */
