--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -87,7 +87,14 @@
         {/if}
 
         <div class="toTop">
-            ⬆ {_to_top}
+            <div id='to_up'>
+                <svg id="to_up_icon" viewBox="0 0 10 6"><polygon points="0 6 5 0 10 6 0 6"/></svg>
+                <span>{_to_top}</span>
+            </div>
+            
+            <div id='to_back'>
+                <svg id="to_back_icon" viewBox="0 0 10 6"><polygon points="0 0 5 6 10 0 0 0"/></svg>
+            </div>
         </div>
 
         <div class="layout">
@@ -384,6 +391,7 @@
         {script "js/al_polls.js"}
         {script "js/al_suggestions.js"}
         {script "js/al_navigation.js"}
+        {script "js/al_comments.js"}
 
         {ifset $thisUser}
             {script "js/al_notifs.js"}
