fix(theme-midnight): "Show more" and "Feed settings"

--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -135,7 +135,8 @@ th,
 .ovk-photo-view,
 .page_wrap_content_main .def_row_content,
 .topGrayBlock,
-.bigPlayer {
+.bigPlayer,
+input[type="number"] {
     border-color: #2c2640 !important;
 }
 
@@ -187,10 +188,8 @@ hr {
 .ovk-diag-action,
 .minilink .counter,
 .topGrayBlock,
-.showMore,
-.showMoreAudiosPlaylist,
-#showMorePhotos,
-#showMoreVideos {
+#show_more,
+.information {
     background-color: #2c2640 !important;
 }
 
@@ -232,7 +231,8 @@ a,
 .paginator a:hover,
 .post-share-button:hover,
 .post-like-button:hover,
-#search_box_button:active {
+#search_box_button:active,
+.mb_tab:hover {
     background-color: #272138 !important;
 }
 
@@ -288,7 +288,8 @@ td.e,
 tr.e,
 .playlistListView:hover, 
 .playlistListView .playlistCover,
-.photosInsert > div {
+.photosInsert > div,
+.attachment_selector #attachment_insert #attachment_insert_count {
     background-color: #231e33 !important;
 }
 
@@ -317,11 +318,11 @@ tr.v,
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/flex_arrow_open.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/flex_arrow_open.png") !important;
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/flex_arrow_shut.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/flex_arrow_shut.gif") !important;
 }
 
 .ovk-video>.preview,
@@ -348,17 +349,17 @@ tr.h {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.3.1/resource/header_purple.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/header_purple.png") !important;
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/header.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/header.png") !important;
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/header_custom.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/header_custom.png") !important;
 }
 
 .page_yellowheader span,
@@ -390,17 +391,18 @@ input[type~="phone"],
 input[type="search"],
 input[type~="search"],
 input[type~="date"],
+input[type="number"],
 select,
 .crp-entry--message.unread {
     background-color: #181826 !important;
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/checkbox.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/checkbox.png") !important;
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/radio.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/radio.png") !important;
 }
 
 .header_navigation .link, .header_navigation .header_divider_stick {
@@ -408,20 +410,20 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/like.gif") !important;
 }
 
 .pinned-mark,
 .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/input_clear.gif") !important;
 }
 
 .user-alert {
@@ -454,7 +456,7 @@ input[type="radio"] {
 }
 
 #backdropEditor {
-    background-image: url("/themepack/midnight/0.0.3.1/resource/backdrop-editor.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.2/resource/backdrop-editor.gif") !important;
     border-color: #473e66 !important;
 }
 
