--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -136,8 +136,15 @@ th,
 .page_wrap_content_main .def_row_content,
 .topGrayBlock,
 .bigPlayer,
-input[type="number"] {
+input[type="number"],
+.like_tooltip_wrapper .like_tooltip_body,
+.like_tooltip_wrapper .like_tooltip_head {
     border-color: #2c2640 !important;
+}
+
+.like_tooltip_wrapper .like_tooltip_head {
+    background: linear-gradient(180deg, #383052, #231e33) !important;
+    box-shadow: unset !important;
 }
 
 .post-upload,
@@ -308,7 +315,8 @@ tr.v,
 .expand_button,
 #userContent blockquote,
 .tippy-box[data-theme~="vk"],
-.searchOptions {
+.searchOptions,
+.like_tooltip_wrapper .like_tooltip_body {
     background-color: #1e1a2b !important;
 }
 
@@ -318,11 +326,11 @@ tr.v,
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/flex_arrow_open.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/flex_arrow_open.png") !important;
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/flex_arrow_shut.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/flex_arrow_shut.gif") !important;
 }
 
 .ovk-video>.preview,
@@ -349,17 +357,17 @@ tr.h {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.3.2/resource/header_purple.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/header_purple.png") !important;
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/header.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/header.png") !important;
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/header_custom.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/header_custom.png") !important;
 }
 
 .page_yellowheader span,
@@ -398,11 +406,11 @@ select,
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/checkbox.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/checkbox.png") !important;
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/radio.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/radio.png") !important;
 }
 
 .header_navigation .link, .header_navigation .header_divider_stick {
@@ -410,20 +418,20 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/like.gif") !important;
 }
 
 .pinned-mark,
 .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/input_clear.gif") !important;
 }
 
 .user-alert {
@@ -456,7 +464,7 @@ input[type="radio"] {
 }
 
 #backdropEditor {
-    background-image: url("/themepack/midnight/0.0.3.2/resource/backdrop-editor.gif") !important;
+    background-image: url("/themepack/midnight/0.0.3.3/resource/backdrop-editor.gif") !important;
     border-color: #473e66 !important;
 }
 
