--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -30,6 +30,10 @@
         {script "js/node_modules/@popperjs/core/dist/umd/popper.min.js"}
         {script "js/node_modules/tippy.js/dist/tippy-bundle.umd.min.js"}
         {script "js/node_modules/handlebars/dist/handlebars.min.js"}
+        {script "js/node_modules/react/dist/react-with-addons.min.js"}
+        {script "js/node_modules/react-dom/dist/react-dom.min.js"}
+        {script "js/vnd_literallycanvas.js"}
+        {css "js/node_modules/literallycanvas/lib/css/literallycanvas.css"}
 
         {if $isTimezoned == NULL}
             {script "js/timezone.js"}
@@ -393,6 +397,7 @@
         {script "js/al_comments.js"}
         {script "js/al_music.js"}
         {script "js/al_despacito_wall.js"}
+        {script "js/al_photos.js"}
 
         {ifset $thisUser}
             {script "js/al_notifs.js"}
